samples/_failures_safe/1761320540_ec1c9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79ddcc76.c: In function ‘update_stats’:
./samples/SAFE/__tmp_79ddcc76.c:130:46: error: expected ‘;’ at end of input
  130 |     for (int i = 0; i < analyzer->entry_count
      |                                              ^
      |                                              ;
./samples/SAFE/__tmp_79ddcc76.c:130:5: error: expected declaration or statement at end of input
  130 |     for (int i = 0; i < analyzer->entry_count
      |     ^~~
